[gd_scene load_steps=12 format=3 uid="uid://do81rp1wdkavi"]

[ext_resource type="FontFile" uid="uid://bs8jflcvaosbm" path="res://资源/Font.ttf" id="1_5gg4y"]
[ext_resource type="Script" path="res://UI/Title/title_screen.gd" id="2_um754"]
[ext_resource type="Texture2D" uid="uid://chefhcxnc5ser" path="res://资源/1/Player.png" id="3_8jwry"]

[sub_resource type="Theme" id="Theme_tjiar"]
default_font = ExtResource("1_5gg4y")
default_font_size = 12

[sub_resource type="Animation" id="Animation_7lq83"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("options:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("start:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -360)]
}

[sub_resource type="Animation" id="Animation_nuxao"]
resource_name = "main_1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, -360), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("options:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 360)]
}

[sub_resource type="Animation" id="Animation_x4xov"]
resource_name = "main_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 360), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gwbcd"]
resource_name = "options"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("options:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 360), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hv20v"]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, -360), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahkem"]
_data = {
"RESET": SubResource("Animation_7lq83"),
"main_1": SubResource("Animation_nuxao"),
"main_2": SubResource("Animation_x4xov"),
"options": SubResource("Animation_gwbcd"),
"start": SubResource("Animation_hv20v")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xumjg"]
atlas = ExtResource("3_8jwry")
region = Rect2(17, 18, 29, 30)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tjiar")
script = ExtResource("2_um754")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ahkem")
}

[node name="main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_right = 332.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "
[shake rate=20.0][center]废土骑士[/center][/shake]"

[node name="start" type="Button" parent="main"]
custom_minimum_size = Vector2(64, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "START"

[node name="options" type="Button" parent="main"]
custom_minimum_size = Vector2(64, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"

[node name="start" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -360.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="start"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_right = 327.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "
[shake rate=20.0][center]选择你的英雄[/center][/shake]"

[node name="start_back" type="Button" parent="start"]
custom_minimum_size = Vector2(64, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 129.0
offset_right = 32.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="Button" type="Button" parent="start"]
layout_mode = 0
offset_left = 114.0
offset_top = 91.0
offset_right = 151.0
offset_bottom = 129.0
icon = SubResource("AtlasTexture_xumjg")
flat = true

[node name="Panel" type="Panel" parent="start"]
layout_mode = 0
offset_left = 158.0
offset_top = 88.0
offset_right = 614.0
offset_bottom = 282.0

[node name="options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_right = 327.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "
[shake rate=20.0][center]设置
[/center][/shake]"

[node name="options_back" type="Button" parent="options"]
custom_minimum_size = Vector2(64, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -10.0
offset_right = 32.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[connection signal="pressed" from="main/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="start/start_back" to="." method="_on_start_back_pressed"]
[connection signal="pressed" from="options/options_back" to="." method="_on_options_back_pressed"]
